--- a/.gitconfig
+++ b/.gitconfig
@@ -26,3 +26,6 @@
   c = commit -v
   rh = reset --hard
   bas = for-each-ref --format='%(authordate) %(refname)' --sort=-committerdate refs/heads refs/remotes
+[user]
+  name = name
+  email = email
