--- a/.gitconfig
+++ b/.gitconfig
@@ -25,6 +25,7 @@
   a = add -p
   c = commit -v
   rh = reset --hard
+  rs = reset --soft HEAD~1
   bas = for-each-ref --format='%(authordate) %(refname)' --sort=-committerdate refs/heads refs/remotes
 [user]
   name = name
