--- a/.gitconfig
+++ b/.gitconfig
@@ -26,6 +26,8 @@
   c = commit -v
   rh = reset --hard
   rs = reset --soft HEAD~1
+  rb = rebase -i HEAD~10
+  rc = rebase --continue
   bas = for-each-ref --format='%(authordate) %(refname)' --sort=-committerdate refs/heads refs/remotes
 [user]
   name = name
