--- a/.gitconfig
+++ b/.gitconfig
@@ -16,6 +16,8 @@
   rs = reset --soft HEAD~1
   rc = rebase --continue
   md = merge develop
+  dd = diff develop
+  ddno = diff develop --name-only
   bas = for-each-ref --format='%(authordate) %(refname)' --sort=-committerdate refs/heads refs/remotes
 [user]
   name = kitajima
