--- a/src/.gitconfig
+++ b/src/.gitconfig
@@ -17,6 +17,7 @@
   md = merge develop
   dd = diff develop
   ddno = diff develop --name-only
+  ddns = diff develop --name-status
   bas = for-each-ref --format='%(authordate) %(refname)' --sort=-committerdate refs/heads refs/remotes
 [user]
   name = kitajima
